--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,1 +1,58 @@
 {% extends "global/base.html" %}
+
+{% block content %}
+{% if page_obj %}
+    <div class="resposive-table">
+        <table class="contacts-table">
+            <caption class="table-caption">
+                Contacts
+            </caption>
+
+            <thead>
+                <tr class='table-row table-row-header'>
+                    <th class='table-header'>ID</th>
+                    <th class='table-header'>First Name</th>
+                    <th class='table-header'>Last Name</th>
+                    <th class='table-header'>Phone</th>
+                    <th class='table-header'>Email</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for contact in page_obj %}
+                    <tr class="table-row">
+                        <td class="table-cel">
+                            <a href="{% url "contact:contact" contact.id %}" class='table-link'> {{contact.id}}</a> {% comment %} futuramente tera a url da view {% endcomment %}
+                        </td>
+
+                        <td class="table-cel">
+                            {{contact.first_name}}
+                        </td>
+
+                        <td class="table-cel">
+                            {{contact.last_name}}
+
+                        </td>
+
+                        <td class="table-cel">
+                            {{contact.phone}}
+
+                        </td>
+
+                        <td class="table-cel">
+                            {{contact.email}}
+
+                        </td>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% else %}
+    <div class="single-contact">
+        <h1 class="single-contact-name">
+            Nenhum Contato Encontrado
+        </h1>
+    </div>
+
+    {% endif %}
+{% endblock content %}
