Registro,Login e Update do Usuário - Validação de Login e Ownership

--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -22,7 +22,7 @@
                 {{field.errors}} {% comment %} erro simulado de validação do campo {% endcomment %}
 
                 {% if field.help_text %}
-                   <p class="help-teext"> {{ field.help_text}} </p>
+                   <p class="help-text"> {{ field.help_text}} </p>
                 {% endif %}
               
                 </div>
