--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -18,7 +18,7 @@
             </p>
         {% endif %}
         
-
+        {% if user == contact.owner %}
         <div class="contact-links">
             <a class="btn btn-link" href="{% url "contact:update" contact.id %}">Update</a> {% comment %} passei a url e passei o parametro {% endcomment %}
 
@@ -38,7 +38,7 @@
                 
             </form>
         </div>
-        
+        {% endif %}
     </div>
 
 {% endblock content %}
